fixed services page - img sizes on mobile

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -131,7 +131,7 @@ h1,h4,p {
   display: block;
   width: fit-content;
   /* width: 100%; */
-  max-width: 100%;
+  /* max-width: 100%; */
   height: 100%;
   max-height: 100%;
   object-fit: cover;
